add just, Interval and Timer, fromArray, fromFuture operator.

--- a/RxJava/app/src/main/AndroidManifest.xml
+++ b/RxJava/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rxjavaeg1">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,13 +11,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".operator.interval_and_timer.IntervalActivity">
+        </activity>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+        <activity android:name=".MainActivity">
+        </activity>
+
+        <activity android:name=".operator.interval_and_timer.TimerActivity" >
+        </activity>
+
+        <activity android:name=".operator.just_range_repeat.JustOperatorActivity" >
+        </activity>
+
+        <activity android:name=".operator.from_operator.FromArrayOperatorActivity" >
+        </activity>
+
+        <activity android:name=".operator.from_operator.FromIterableOperatorActivity" >
+        </activity>
+
+        <activity android:name=".operator.future.FutureActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
