--- a/RxJava/app/build.gradle
+++ b/RxJava/app/build.gradle
@@ -19,6 +19,10 @@ android {
 }
 
 dependencies {
+
+    /*Define here or inside Project gradle
+    def rxbinding_version = "3.0.0-alpha2"*/
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -47,5 +51,8 @@ dependencies {
     //retrofit
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.5.0"
+
+    // Rx Binding Library
+    implementation "com.jakewharton.rxbinding3:rxbinding:$rxbinding_version"
 
 }
