--- a/RxJava/build.gradle
+++ b/RxJava/build.gradle
@@ -4,7 +4,6 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
@@ -20,6 +19,10 @@ allprojects {
         jcenter()
         
     }
+}
+
+ext {
+    rxbinding_version = "3.0.0-alpha2"
 }
 
 task clean(type: Delete) {
