--- a/RxJava/app/build.gradle
+++ b/RxJava/app/build.gradle
@@ -54,5 +54,6 @@ dependencies {
 
     // Rx Binding Library
     implementation "com.jakewharton.rxbinding3:rxbinding:$rxbinding_version"
+    implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
 }
